# AI_development

./: .gitignore
challenges/: estatistica_para_devs.ipynb  primeiro_modelo_scikit_learn.ipynb
challenges/eda/: eda.ipynb
challenges/supervised_algorithms/decision_tree/: .gitignore  README.md  main.py  pyproject.toml
challenges/supervised_algorithms/multiple_linear_regression/: model.ipynb
challenges/supervised_algorithms/naive_bayes/: .gitignore  README.md  main.py  pyproject.toml
challenges/supervised_algorithms/polynomial_regression/: api.py  model.ipynb
challenges/supervised_algorithms/simple_linear_regression/: model.ipynb
classes/diabetes_model/: model.ipynb
classes/eda/: model.ipynb
classes/ensemble_models/: preprocessor_dataset_leads.pkl
classes/ensemble_models/bagging/: bagging_classification.ipynb
classes/ensemble_models/boosting/: adaboost_classification.ipynb  adaboost_regression.ipynb
classes/ensemble_models/catboost/: modelo_risco.ipynb
classes/ensemble_models/random_forest/: churn_employee.ipynb
classes/ensemble_models/sklearn_introduction/: preprocessor_dataset_healthcosts.pkl
classes/ensemble_models/stacking/: stacking_regression.ipynb
classes/ensemble_models/voting/: voting_regression.ipynb
classes/final_challenge/: modelo_antifraude.ipynb  modelo_antifraude.pkl  modelo_inadimplencia.ipynb  modelo_inadimplencia.pkl  modelo_recomendacao.ipynb
classes/final_challenge/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
classes/statistic_devs/: model.ipynb
(+47 files in other folders)
