[project]
name = "decision-tree"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pingouin>=0.5.5",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
]
